[gd_scene load_steps=4 format=2]

[ext_resource path="res://bullet.png" type="Texture" id=1]
[ext_resource path="res://magnet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 179.837

[node name="magnate" type="Area2D" groups=[
"magnet",
]]
collision_layer = 4
collision_mask = 6
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( -300, 0, 300, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 1.43, 1.43 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_magnate_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_magnate_mouse_exited"]
